[tool.poetry]
name = "brokenbricks"
version = "0.1.0"
description = "generate Jack White inspired lyrics using Python"
authors = ["Adrienne Franke <adriennefranke@gmail.com>"]
license = "hippocratic"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
nltk = "^3.6.1"
keras = "^2.4.3"
numpy = "<1.20"
tensorflow = "^2.4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
